force-app/main/default/objects/Arena__c/Arena__c.object-meta.xml
<CustomObject>
    <description>Ice rink or arena venue information</description>
    <label>Arena</label>
    <nameField>
        <label>Arena Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arenas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>