force-app/main/default/objects/Arena__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Street address of the arena</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>