force-app/main/default/objects/Arena__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City where the arena is located</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>