force-app/main/default/objects/Arena__c/fields/Ice_Surface_Count__c.field-meta.xml
<CustomField>
    <fullName>Ice_Surface_Count__c</fullName>
    <description>Number of ice surfaces at this arena</description>
    <label>Ice Surface Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>