force-app/main/default/objects/Arena__c/fields/Province_State__c.field-meta.xml
<CustomField>
    <fullName>Province_State__c</fullName>
    <description>Province or State where arena is located</description>
    <label>Province/State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>